kubernetes/ingress/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec: 
  rules:
  - host: dashboard.com
    http:
      paths:
      - backend:
          service.name: kubernetes-dashboard
          service.port.number: 80
